gitops/h5ai/h5ai-app.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: h5ai
  labels:
    app.kubernetes.io/name: h5ai
---
apiVersion: v1
kind: Service
metadata:
  name: h5ai
  namespace: h5ai
  labels:
    app.kubernetes.io/name: h5ai
spec:
  selector:
    app.kubernetes.io/name: h5ai
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: h5ai
  namespace: h5ai
  labels:
    app.kubernetes.io/name: h5ai
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: h5ai
  template:
    metadata:
      labels:
        app.kubernetes.io/name: h5ai
    spec:
      containers:
        - name: h5ai
          image: 'awesometic/h5ai:latest'
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              name: http
          readinessProbe:
            failureThreshold: 5
            httpGet:
              path: /_h5ai/public/index.php
              port: http
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 120
          # livenessProbe:
          #   failureThreshold: 5
          #   httpGet:
          #     path: /_h5ai/
          #     port: http
          #   initialDelaySeconds: 60
          #   periodSeconds: 10
          #   successThreshold: 1
          #   timeoutSeconds: 60
          resources:
            limits: {}
            requests:
              cpu: 5m
              memory: 64Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              add:
                - CHOWN
                - SETUID
                - SETGID
                - NET_BIND_SERVICE
              drop:
                - ALL
            seccompProfile:
              type: RuntimeDefault
          volumeMounts:
            - mountPath: /h5ai/files
              name: data-files
              readOnly: true
            - mountPath: /h5ai/backup
              name: data-backup
              readOnly: true
            - mountPath: /h5ai/kubernetes
              name: data-kubernetes
              readOnly: true
            - mountPath: /h5ai/kubernetes-lfs
              name: data-kubernetes-lfs
              readOnly: true
      securityContext: {}
      volumes:
        - emptyDir: {}
          name: dummy
        - name: data-files
          persistentVolumeClaim:
            claimName: data-files
        - name: data-backup
          persistentVolumeClaim:
            claimName: data-backup
        - name: data-kubernetes
          persistentVolumeClaim:
            claimName: data-kubernetes
        - name: data-kubernetes-lfs
          persistentVolumeClaim:
            claimName: data-kubernetes-lfs
          
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: h5ai
  namespace: h5ai
  labels:
    app.kubernetes.io/name: h5ai
spec:
  tls:
    - hosts:
        - files.buc.sh
      secretName: cert-files-buc-sh
  rules:
    - host: files.buc.sh
      http:
        paths:
          - backend:
              service:
                name: h5ai
                port:
                  name: http
            path: /
            pathType: Prefix
