gitops/h5ai/nfs.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: h5ai-nfs
  namespace: h5ai
  labels:
    app.kubernetes.io/instance: nfs
    app.kubernetes.io/name: h5ai
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: nfs
      app.kubernetes.io/name: h5ai
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: nfs
        app.kubernetes.io/name: h5ai
    spec:
      # securityContext:
      #   runAsNonRoot: true
      #   runAsUser: 1001
      #   runAsGroup: 1001
      #   fsGroup: 1001
      automountServiceAccountToken: true
      containers:
      - name: h5ai
        image:  awesometic/h5ai
        imagePullPolicy: IfNotPresent
        command:
        - bash
        - -c
        - 'cp -f /myconfig/options.json /usr/share/h5ai/_h5ai/private/conf && exec /init.sh'
        ports:
        - name: http
          containerPort: 80
        livenessProbe:
          failureThreshold: 3
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
          tcpSocket:
            port: 80
        readinessProbe:
          failureThreshold: 3
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
          tcpSocket:
            port: 80
        resources:
          requests:
            cpu: 5m
            memory: 20Mi
          limits: {}
        securityContext:
        #   allowPrivilegeEscalation: false
          capabilities:
            add:
            - CHOWN
            # - DAC_OVERRIDE
            - SETUID
            - SETGID
            # - FOWNER
        #     drop:
        #     - ALL
        #   seccompProfile:
        #     type: RuntimeDefault
        volumeMounts:
        - name: h5ai-config
          mountPath: /myconfig
        - mountPath: /h5ai/nfs
          name: nfs-data
          readOnly: true
      volumes:
      - name: h5ai-config
        configMap:
          name: h5ai-nfs-config
      - name: nfs-data
        persistentVolumeClaim:
          claimName: nfs-data
---
apiVersion: v1
kind: Service
metadata:
  name: h5ai-nfs
  namespace: h5ai
  labels:
    app.kubernetes.io/instance: nfs
    app.kubernetes.io/name: h5ai
spec:
  selector:
    app.kubernetes.io/instance: nfs
    app.kubernetes.io/name: h5ai
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: http

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: h5ai-nfs
  namespace: h5ai
  labels:
    app.kubernetes.io/instance: nfs
    app.kubernetes.io/name: h5ai
spec:
  rules:
  - host: files.buc.sh
    http:
      paths:
      - path: /nfs
        pathType: Prefix
        backend:
          service:
            name: h5ai-nfs
            port:
              number: 80
