gitops/h5ai/syncthing.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: h5ai-syncthing
  namespace: syncthing
  labels:
    app.kubernetes.io/instance: syncthing
    app.kubernetes.io/name: h5ai
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: syncthing
      app.kubernetes.io/name: h5ai
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: syncthing
        app.kubernetes.io/name: h5ai
    spec:
      # securityContext:
      #   runAsNonRoot: true
      #   runAsUser: 1001
      #   runAsGroup: 1001
        # fsGroup: 0
      automountServiceAccountToken: true
      containers:
      - name: h5ai
        image:  awesometic/h5ai
        imagePullPolicy: IfNotPresent
        command:
        - bash
        - -c
        - 'cp -f /myconfig/options.json /usr/share/h5ai/_h5ai/private/conf && exec /init.sh'
        # TODO
        ports:
        - name: http
          containerPort: 80
        livenessProbe:
          failureThreshold: 3
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
          tcpSocket:
            port: 80
        readinessProbe:
          failureThreshold: 3
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
          tcpSocket:
            port: 80
        resources:
          requests:
            cpu: 5m
            memory: 20Mi
          limits: {}
        # TODO
        securityContext:
        #   allowPrivilegeEscalation: false
          capabilities:
            add:
            - CHOWN
            - DAC_OVERRIDE
            - SETUID
            - SETGID
            # - FOWNER
            - NET_BIND_SERVICE
            drop:
            - ALL
        #   seccompProfile:
        #     type: RuntimeDefault
        volumeMounts:
        - name: h5ai-config
          mountPath: /myconfig
        - mountPath: /h5ai/syncthing
          name: syncthing-data
          readOnly: true
      volumes:
      - name: h5ai-config
        configMap:
          name: h5ai-syncthing-config
      - name: syncthing-data
        persistentVolumeClaim:
          claimName: syncthing-data

---
apiVersion: v1
kind: Service
metadata:
  name: h5ai-syncthing
  namespace: syncthing
  labels:
    app.kubernetes.io/instance: syncthing
    app.kubernetes.io/name: h5ai
spec:
  selector:
    app.kubernetes.io/instance: syncthing
    app.kubernetes.io/name: h5ai
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: http

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: h5ai-syncthing
  namespace: syncthing
  labels:
    app.kubernetes.io/instance: syncthing
    app.kubernetes.io/name: h5ai
spec:
  rules:
  - host: files.buc.sh
    http:
      paths:
      - path: /syncthing
        pathType: Prefix
        backend:
          service:
            name: h5ai-syncthing
            port:
              number: 80
